samples/_failures_safe/1761434887_483829_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25a77a7d.c: In function ‘main’:
./samples/SAFE/__tmp_25a77a7d.c:147:25: error: missing terminating " character
  147 |     input_matrix(&mat2, "B
      |                         ^~
./samples/SAFE/__tmp_25a77a7d.c:147:5: error: expected expression at end of input
  147 |     input_matrix(&mat2, "B
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_25a77a7d.c:147:5: error: expected declaration or statement at end of input
